Refactor flippy book styles

--- a/app/assets/stylesheets/book.scss
+++ b/app/assets/stylesheets/book.scss
@@ -2,17 +2,17 @@
   padding: 5px;
 }
 
-#book-container {
+.book-container {
   @extend .callout;
   position: relative;
-  padding-top: 20px ! important;
-  padding-bottom: 20px ! important;
+  padding-top: 20px !important;
+  padding-bottom: 20px !important;
   overflow: hidden;
-  background-color: transparent ! important;
+  background-color: transparent !important;
   border: solid 1px lighten($base-border-color, 10%);
 }
 
-#book-intro {
+.book-intro {
   position: absolute;
   top: 40px;
   left: 50px;
@@ -35,7 +35,7 @@
     color: $light-font-color;
   }
 
-  #open-book {
+  .open-book-link {
     display: block;
     margin-top: 10px;
     margin-bottom: 10px;
@@ -43,7 +43,7 @@
   }
 }
 
-#flippy-book {
+.flippy-book {
   position: relative;
   width: 601px;
   height: 402px;
@@ -54,7 +54,7 @@
   perspective: 1500;
 }
 
-#flippy-book #book-cover {
+.flippy-book-cover {
   position: absolute;
   top: 0;
   left: 4px;
@@ -62,7 +62,7 @@
   height: 398px;
 }
 
-.webkit #flippy-book #book-cover {
+.webkit .flippy-book-cover {
   right: 6px;
   left: auto;
   -moz-transition-duration: 1.2s;
@@ -73,7 +73,7 @@
   -webkit-transition-duration: 1.2s;
 }
 
-.webkit #flippy-book #book-cover.open {
+.webkit .flippy-book-cover.open {
   -webkit-transform: rotateY(-180deg);
   transform: rotateY(-180deg);
   -webkit-transform-origin: -1px 0;
@@ -82,13 +82,13 @@
   -moz-transform: rotateY(-180deg);
 }
 
-.webkit #flippy-book #book-cover.close {
+.webkit .flippy-book-cover.close {
   -webkit-transform-origin: 0 0;
   transform-origin: 0 0;
   -moz-transform-origin: 0 0;
 }
 
-#flippy-book #book-cover-outside {
+.flippy-book-cover-outside {
   @include background-image-2x("/images/pro-git-298x398", 298px, 398px, 0 0, no-repeat, jpg);
   display: none;
   width: 298px;
@@ -99,44 +99,45 @@
   background-color: #000102;
 }
 
-#flippy-book #book-cover.close {
+.flippy-book-cover.close {
   right: 6px;
   left: auto;
   display: block;
+
+  .flippy-book-cover-outside {
+    display: block;
+  }
 }
 
-#flippy-book #book-cover.close #book-cover-outside {
+
+.three-dee .flippy-book-cover-outside {
   display: block;
 }
 
-.three-dee #flippy-book #book-cover-outside {
-  display: block;
-}
-
-#flippy-book #book-cover-inside {
+.flippy-book-cover-inside {
   right: 4px;
   width: 298px;
   height: 398px;
   background: #fff url("/images/bg/flippy-book-inside-cover.png") 0 0 no-repeat;
 }
 
-.three-dee #flippy-book #book-cover-inside {
+.three-dee .flippy-book-cover-inside {
   -webkit-transform: rotateY(180deg);
   transform: rotateY(180deg);
   -moz-transform: rotateY(180deg);
 }
 
-#flippy-book .face {
+.flippy-book .face {
   position: absolute;
 }
 
-.three-dee #flippy-book .face {
+.three-dee .flippy-book .face {
   -webkit-backface-visibility: hidden;
   -moz-backface-visibility: hidden;
   backface-visibility: hidden;
 }
 
-#flippy-book #book-inside-page {
+.flippy-book-inside-page {
   position: absolute;
   top: 0;
   right: 6px;
@@ -144,7 +145,7 @@
   height: 398px;
 }
 
-#flippy-book span.header {
+.flippy-book span.header {
   display: block;
   margin-top: 8px;
   font-size: 12px;
@@ -152,7 +153,7 @@
   text-align: center;
 }
 
-#about-book {
+.flippy-book-about-link {
   @include background-image-2x("/images/icons/info", 18px, 17px, 40px 1px);
   display: none;
   padding-left: 22px;
@@ -166,7 +167,8 @@
   }
 }
 
-.book-toc {
+.book-toc,
+.flippy-book-toc {
   @extend .unstyled;
   margin: 30px 36px;
 
@@ -225,16 +227,16 @@
   padding: 5px;
 }
 
-.book table.ref th:nth-child(1),
-td:nth-child(1) {
+.book .ref th:nth-child(1),
+.book .ref td:nth-child(1) {
   width: 25%;
   padding: 5px;
 }
 
-#book-chapters {
+.book-chapters {
   @extend .section-nav-container;
 
-  #chapters-dropdown {
+  .chapters-dropdown {
     top: 30px;
     padding: 12px;
   }
