--- a/app/views/books/section.html.erb
+++ b/app/views/books/section.html.erb
@@ -7,7 +7,7 @@
   <%= render 'shared/related' %>
 <% end %>
 
-<div id="book-chapters">
+<div class="book-chapters">
   <%= render 'chapters' %>
   <% if @book.edition == 2%>
     <span class="light" id="edition">
