Use class for tagline

--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -110,20 +110,20 @@ header {
   position: relative;
   padding-bottom: 26px;
   margin-top: 14px;
+}
 
-  #tagline {
-    position: absolute;
-    top: 11px;
-    left: 120px;
-    display: block;
-    margin-top: 1px;
-    font-size: 24px;
-    line-height: 24px;
-    color: $light-font-color;
+.site-tagline {
+  position: absolute;
+  top: 11px;
+  left: 120px;
+  display: block;
+  margin-top: 1px;
+  font-size: 24px;
+  line-height: 24px;
+  color: $light-font-color;
 
-    em {
-      letter-spacing: 1px;
-    }
+  em {
+    letter-spacing: 1px;
   }
 }
 
