:fire: border-radius mixin

--- a/app/assets/stylesheets/homepage.scss
+++ b/app/assets/stylesheets/homepage.scss
@@ -162,7 +162,6 @@ $monitor-height: 271px;
   }
 
   .button {
-    @include border-radius(2px);
     @include box-shadow(0 1px 0 #148a92);
     display: block;
     width: 224px;
@@ -180,6 +179,7 @@ $monitor-height: 271px;
     border-right: solid 1px #1f6367;
     border-bottom: solid 1px #134143;
     border-left: solid 1px #1f6367;
+    border-radius: 2px;
     -moz-transition-duration: 0.3s;
     -o-transition-duration: 0.3s;
     transition-duration: 0.3s;
