--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -36,11 +36,11 @@ aside {
 }
 
 .site-content {
-  @include border-radius(5px);
   padding: 22px;
   margin-bottom: 35px;
   background-color: #fcfcfa;
   border: solid 1px #e2e0d8;
+  border-radius: 5px;
 
   .two-column {
     @include clearfix;
@@ -57,10 +57,10 @@ aside {
   }
 
   .callout {
-    @include border-radius(3px);
     padding: 8px 14px 4px;
     margin-bottom: 1.4em;
     background-color: $callout-color;
+    border-radius: 3px;
 
     p {
       margin-bottom: 0;
@@ -235,13 +235,13 @@ aside nav ul {
 
 .section-nav-container {
   @extend .unstyled;
-  @include border-radius(3px);
   position: relative;
   padding: 8px 12px 6px;
   margin-bottom: 10px;
   font-size: 13px;
   font-weight: bold;
   background-color: rgba(223, 221, 213, 0.33);
+  border-radius: 3px;
 
   .light {
     font-weight: normal;
@@ -284,31 +284,31 @@ aside nav ul {
   border: solid 1px transparent;
 
   &.active {
-    @include border-top-left-radius(3px);
-    @include border-top-right-radius(3px);
     position: relative;
     z-index: 200;
     background-color: #fff !important;
     border: solid 1px darken($base-border-color, 8%);
     border-bottom: 0;
+    border-top-left-radius: 3px;
+    border-top-right-radius: 3px;
   }
 }
 
 .dropdown-panel {
-  @include border-radius(3px);
   @include box-shadow(0 1px 2px #ccc);
   position: absolute;
   z-index: 199;
   display: none;
   background-color: #fff;
   border: solid 1px darken($base-border-color, 8%);
+  border-radius: 3px;
 
   &.left {
-    @include border-top-left-radius(0);
+    border-top-left-radius: 0;
   }
 
   &.right {
-    @include border-top-right-radius(0);
+    border-top-right-radius: 0;
   }
 }
 
