--- a/app/assets/stylesheets/reference.scss
+++ b/app/assets/stylesheets/reference.scss
@@ -84,23 +84,23 @@
   }
 
   footer {
-    @include border-bottom-left-radius(3px);
-    @include border-bottom-right-radius(3px);
     padding: 4px 12px;
     margin-top: 0;
     font-size: 11px;
     font-weight: normal;
     color: $font-color;
     background-color: #eae9e0;
+    border-bottom-right-radius: 3px;
+    border-bottom-left-radius: 3px;
 
     input {
-      @include border-radius(1px);
       width: 70px;
       padding: 1px 3px;
       font-size: 11px;
       color: $font-color;
       background-color: #f0efe8;
       border: solid 1px #e2e0d8;
+      border-radius: 1px;
     }
   }
 }
@@ -208,14 +208,14 @@
       text-align: center;
 
       span {
-        @include border-top-left-radius(10px);
-        @include border-bottom-left-radius(10px);
         display: inline-block;
         float: left;
         padding: 0 5px;
         font-size: 10px;
         font-style: italic;
         background-color: #f5f5f3;
+        border-top-left-radius: 10px;
+        border-bottom-left-radius: 10px;
       }
     }
   }
