--- a/app/assets/stylesheets/search.scss
+++ b/app/assets/stylesheets/search.scss
@@ -1,5 +1,4 @@
 .search-results {
-  @include border-radius(3px);
   @include box-shadow(0 0 7px rgba(0, 0, 0, 0.25));
   position: absolute;
   top: 2px;
@@ -9,23 +8,24 @@
   width: 384px;
   background: #398a94 url("/images/bg/search-header.jpg") 0 1px repeat-x;
   border-bottom: solid 1px $base-border-color;
+  border-radius: 3px;
 
   header {
-    @include border-top-right-radius(3px);
-    @include border-top-left-radius(3px);
     height: 44px;
     padding: 0;
     margin: 0;
     text-indent: -9999px;
     border: solid 1px #366769;
+    border-top-left-radius: 3px;
+    border-top-right-radius: 3px;
   }
 
   table {
-    @include border-bottom-right-radius(3px);
-    @include border-bottom-left-radius(3px);
     width: 100%;
     line-height: 1;
     background-color: #fff;
+    border-bottom-right-radius: 3px;
+    border-bottom-left-radius: 3px;
 
     td {
       border-top: solid 1px #cfddde;
