--- a/app/assets/stylesheets/sidebar.scss
+++ b/app/assets/stylesheets/sidebar.scss
@@ -13,7 +13,7 @@
   }
 
   .callout {
-    @include border-radius(3px);
+    border-radius: 3px;
     padding: 20px;
     color: lighten($font-color, 20%);
     background-color: #ebe9e1;
