--- a/app/assets/stylesheets/typography.scss
+++ b/app/assets/stylesheets/typography.scss
@@ -253,7 +253,6 @@ blockquote {
 }
 
 code {
-  @include border-radius(3px);
   display: block;
   padding: 10px 15px 13px;
   margin-bottom: 1em;
@@ -263,6 +262,7 @@ code {
   color: $orange;
   background-color: #fff;
   border: solid 1px #efeee6;
+  border-radius: 3px;
 }
 
 // Quotes
@@ -322,7 +322,6 @@ cite {
 }
 
 .subtle-button {
-  @include border-radius(3px);
   @include box-shadow(0 1px 0 #f1f1e9);
   display: inline-block;
   padding: 3px 20px;
@@ -337,6 +336,7 @@ cite {
   border-right: solid 1px #dedcd4;
   border-bottom: solid 1px #cdcbc4;
   border-left: solid 1px #dedcd4;
+  border-radius: 3px;
   -moz-transition-duration: 0.3s;
   transition-duration: 0.3s;
   -moz-transition-property: background-image;
