--- a/app/assets/stylesheets/forms.scss
+++ b/app/assets/stylesheets/forms.scss
@@ -27,7 +27,6 @@ input, textarea {
 
 .search-form {
   @include background-image-2x("/images/icons/search", 17px, 17px, 10px 50%);
-  @include border-radius(20px);
   @include box-shadow(inset 0 1px 4px #ddd);
   position: absolute;
   top: 10px;
@@ -37,6 +36,7 @@ input, textarea {
   padding-left: 32px;
   background-color: #fcfcfa ! important;
   border: solid 1px #ceccc5;
+  border-radius: 20px;
 
   &.focus {
     background-color: #fff;
@@ -45,7 +45,6 @@ input, textarea {
 }
 
 .search-text {
-  @include border-radius(20px);
   width: 100%;
   height: 20px;
   margin-top: 5px;
@@ -54,6 +53,7 @@ input, textarea {
   color: $font-color;
   background-color: transparent;
   border: 0;
+  border-radius: 20px;
 }
 
 
