:fire: box-shadow mixin

--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -295,13 +295,13 @@ aside nav ul {
 }
 
 .dropdown-panel {
-  @include box-shadow(0 1px 2px #ccc);
   position: absolute;
   z-index: 199;
   display: none;
   background-color: #fff;
   border: solid 1px darken($base-border-color, 8%);
   border-radius: 3px;
+  box-shadow: 0 1px 2px #ccc;
 
   &.left {
     border-top-left-radius: 0;
