--- a/app/assets/stylesheets/typography.scss
+++ b/app/assets/stylesheets/typography.scss
@@ -322,7 +322,7 @@ cite {
 }
 
 .subtle-button {
-  @include box-shadow(0 1px 0 #f1f1e9);
+  box-shadow: 0 1px 0 #f1f1e9;
   display: inline-block;
   padding: 3px 20px;
   font-size: 12px;
