--- a/app/assets/stylesheets/forms.scss
+++ b/app/assets/stylesheets/forms.scss
@@ -27,7 +27,6 @@ input, textarea {
 
 .search-form {
   @include background-image-2x("/images/icons/search", 17px, 17px, 10px 50%);
-  @include box-shadow(inset 0 1px 4px #ddd);
   position: absolute;
   top: 10px;
   right: 0;
@@ -37,6 +36,7 @@ input, textarea {
   background-color: #fcfcfa ! important;
   border: solid 1px #ceccc5;
   border-radius: 20px;
+  box-shadow: inset 0 1px 4px #ddd;
 
   &.focus {
     background-color: #fff;
