--- a/app/assets/stylesheets/search.scss
+++ b/app/assets/stylesheets/search.scss
@@ -1,5 +1,4 @@
 .search-results {
-  @include box-shadow(0 0 7px rgba(0, 0, 0, 0.25));
   position: absolute;
   top: 2px;
   right: -8px;
@@ -9,6 +8,7 @@
   background: #398a94 url("/images/bg/search-header.jpg") 0 1px repeat-x;
   border-bottom: solid 1px $base-border-color;
   border-radius: 3px;
+  box-shadow:0 0 7px rgba(0, 0, 0, 0.25);
 
   header {
     height: 44px;
