Use autoprefixer for gradients

--- a/app/views/doc/watch.html.haml
+++ b/app/views/doc/watch.html.haml
@@ -4,7 +4,7 @@
 - content_for :sidebar do
   = render 'shared/book'
 
-%div#main
+%div.site-content
   %h1= "#{@video[2]} Episode #{@video[0]}"
 
   %h2= @video[3]
