--- a/app/views/downloads/downloading.html.haml
+++ b/app/views/downloads/downloading.html.haml
@@ -5,7 +5,7 @@
 - content_for :sidebar do
   = render 'shared/book'
 
-%div#main
+%div.site-content
   %h1 Downloading Git
 
   %div.callout.downloading
