--- a/app/views/downloads/installers/index.html.haml
+++ b/app/views/downloads/installers/index.html.haml
@@ -6,7 +6,7 @@
     %p
       The entire <strong><a href="#">Pro Git book</a></strong> written by Scott Chacon and Ben Straub is available to <a href="#">read online for free</a>. Dead tree versions are available on <a href="#">Amazon.com</a>.
 
-%div#main
+%div.site-index
   %h1 Git Installers
 
   %div.two-column
