--- a/app/views/downloads/index.html.haml
+++ b/app/views/downloads/index.html.haml
@@ -5,7 +5,7 @@
 - content_for :sidebar do
   = render 'shared/book'
 
-%div#main
+%div.site-content
   %div.two-column
     %div.column-left
       %h1 Downloads
