Another scss-lint pass

--- a/app/assets/stylesheets/book.scss
+++ b/app/assets/stylesheets/book.scss
@@ -24,7 +24,7 @@
     padding-bottom: 20px;
   }
 
-  img.creative-commons {
+  .cc-logo {
     display: block;
     margin: 10px auto;
   }
@@ -50,6 +50,18 @@
   margin: 0 auto;
   background: transparent url("/images/bg/flippy-book.png") 0 0 no-repeat;
   perspective: 1500;
+
+  .face {
+    position: absolute;
+  }
+
+  .header {
+    display: block;
+    margin-top: 8px;
+    font-size: 12px;
+    color: $light-font-color;
+    text-align: center;
+  }
 }
 
 .flippy-book-cover {
@@ -58,6 +70,16 @@
   left: 4px;
   width: 298px;
   height: 398px;
+
+  &.close {
+    right: 6px;
+    left: auto;
+    display: block;
+
+    .flippy-book-cover-outside {
+      display: block;
+    }
+  }
 }
 
 .webkit .flippy-book-cover {
@@ -65,15 +87,15 @@
   left: auto;
   transition-duration: 1.2s;
   transform-style: preserve-3d;
-}
 
-.webkit .flippy-book-cover.open {
-  transform: rotateY(-180deg);
-  transform-origin: -1px 0;
-}
+  &.open {
+    transform: rotateY(-180deg);
+    transform-origin: -1px 0;
+  }
 
-.webkit .flippy-book-cover.close {
-  transform-origin: 0 0;
+  &.close {
+    transform-origin: 0 0;
+  }
 }
 
 .flippy-book-cover-outside {
@@ -86,17 +108,6 @@
   cursor: pointer;
   background-color: #000102;
 }
-
-.flippy-book-cover.close {
-  right: 6px;
-  left: auto;
-  display: block;
-
-  .flippy-book-cover-outside {
-    display: block;
-  }
-}
-
 
 .three-dee .flippy-book-cover-outside {
   display: block;
@@ -113,10 +124,6 @@
   transform: rotateY(180deg);
 }
 
-.flippy-book .face {
-  position: absolute;
-}
-
 .three-dee .flippy-book .face {
   backface-visibility: hidden;
 }
@@ -127,14 +134,6 @@
   right: 6px;
   width: 298px;
   height: 398px;
-}
-
-.flippy-book span.header {
-  display: block;
-  margin-top: 8px;
-  font-size: 12px;
-  color: $light-font-color;
-  text-align: center;
 }
 
 .flippy-book-about-link {
