--- a/app/assets/stylesheets/downloads.scss
+++ b/app/assets/stylesheets/downloads.scss
@@ -7,10 +7,10 @@
     font-size: 12px;
     line-height: 1.4;
     color: $light-font-color;
-  }
 
-  p + p {
-    margin-top: 14px;
+    + p {
+      margin-top: 14px;
+    }
   }
 
   img {
@@ -58,8 +58,8 @@
 }
 
 .download-next-steps {
-  @include clearfix;
   @extend .unstyled;
+  @include clearfix;
   padding-top: 24px;
 
   li {
@@ -67,10 +67,10 @@
     float: left;
     width: 200px;
     margin-bottom: 20px;
-  }
 
-  li + li {
-    margin-left: 20px;
+    + li {
+      margin-left: 20px;
+    }
   }
 
   a {
