--- a/app/assets/stylesheets/errors.scss
+++ b/app/assets/stylesheets/errors.scss
@@ -46,9 +46,9 @@ nav ul {
         color: darken($orange, 5%);
       }
     }
-  }
 
-  li + li {
-    margin-left: 15px;
+    + li {
+      margin-left: 15px;
+    }
   }
 }
