--- a/app/assets/stylesheets/forms.scss
+++ b/app/assets/stylesheets/forms.scss
@@ -1,28 +1,27 @@
-\::-webkit-input-placeholder {
+input:placeholder {
   color: #9a9994 !important;
 }
 
-input:-moz-placeholder {
+.input-inactive {
   color: #9a9994 !important;
 }
 
-input.inactive {
-  color: #9a9994 !important;
-}
-
-input.active {
+.input-active {
   color: $font-color !important;
 }
 
-input, textarea {
+input,
+textarea {
   font-family: $base-font-family;
   font-size: 14px;
   outline: none;
 }
 
-.windows.chrome input, .windows.chrome textarea,
-.windows.ie8 input, .windows.chrome textarea {
-  font-family: $base-font-family-fallback ! important;
+.windows.chrome input,
+.windows.chrome textarea,
+.windows.ie8 input,
+.windows.chrome textarea {
+  font-family: $base-font-family-fallback !important;
 }
 
 .search-form {
@@ -33,7 +32,7 @@ input, textarea {
   z-index: 1000;
   width: 262px;
   padding-left: 32px;
-  background-color: #fcfcfa ! important;
+  background-color: #fcfcfa !important;
   border: solid 1px #ceccc5;
   border-radius: 20px;
   box-shadow: inset 0 1px 4px #ddd;
