--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -23,12 +23,11 @@ body {
   overflow: visible;
 }
 
-aside {
+.site-sidebar {
   float: left;
   width: 218px;
   margin-bottom: 35px;
 }
-
 
 .site-content-wrapper {
   float: right;
@@ -138,46 +137,48 @@ header {
 }
 
 // Navigation
-aside nav ul {
+.site-nav {
   margin-bottom: 1.4em;
   margin-left: 0;
   font-size: 16px;
   font-weight: bold;
   list-style: none;
+}
 
-  li {
-    margin-bottom: 0.5em;
+.site-nav-section {
+  margin-bottom: 0.5em;
 
-    a {
-      color: #413932;
+  a {
+    color: #413932;
 
-      &.active,
-      &:hover {
-        color: $orange;
-      }
-    }
-
-    ul {
-      display: none;
-      margin-top: 0.3em;
-      margin-left: 20px;
-      font-size: 13px;
-      font-weight: normal;
-
-      li {
-        margin-bottom: 0;
-
-        .active {
-          font-weight: bold;
-        }
-      }
-
-      &.expanded {
-        display: block;
-      }
+    &.active,
+    &:hover {
+      color: $orange;
     }
   }
 }
+
+.site-nav-subnav {
+  display: none;
+  margin-top: 0.3em;
+  margin-left: 20px;
+  font-size: 13px;
+  font-weight: normal;
+  list-style: none;
+
+  li {
+    margin-bottom: 0;
+
+    .active {
+      font-weight: bold;
+    }
+  }
+
+  &.expanded {
+    display: block;
+  }
+}
+
 
 .bottom-nav {
   @extend .callout;
