--- a/app/assets/stylesheets/lists.scss
+++ b/app/assets/stylesheets/lists.scss
@@ -49,7 +49,7 @@
       margin-left: -125px;
       border: solid 1px #b7b7b7;
 
-      &.creative-commons {
+      &.cc-logo {
         display: block;
         float: none;
         width: auto;
