--- a/app/views/doc/ext.html.erb
+++ b/app/views/doc/ext.html.erb
@@ -103,7 +103,7 @@
           <h4><a href="/book">Pro Git</a></h4>
           <p class="description">
             By Scott Chacon
-            <img class="creative-commons" src="/images/creative-commons@2x.png" width="115" height="28" />
+            <img class="cc-logo" src="/images/creative-commons@2x.png" width="115" height="28" />
           </p>
         </li>
         <li>
@@ -111,14 +111,14 @@
           <h4><a href="http://cbx33.github.com/gitt/">Git in the Trenches</a></h4>
           <p class="description">
             By Peter Savage
-            <img class="creative-commons" src="/images/creative-commons.png" />
+            <img class="cc-logo" src="/images/creative-commons.png" />
         </li>
         <li>
           <a href="https://github.com/pluralsight/git-internals-pdf/releases/download/v2.0/peepcode-git.pdf"><img src="/images/books/git-internals@2x.jpg" width="107" height="81" /></a>
           <h4><a href="https://github.com/pluralsight/git-internals-pdf/releases/download/v2.0/peepcode-git.pdf">Git Internals Peepcode PDF</a></h4>
           <p class="description">
             By Scott Chacon
-            <img class="creative-commons" src="/images/creative-commons@2x.png" width="115" height="28" />
+            <img class="cc-logo" src="/images/creative-commons@2x.png" width="115" height="28" />
           </p>
         </li>
         <li>
