Correct Uzbek language title

--- a/app/views/doc/_translations.html.erb
+++ b/app/views/doc/_translations.html.erb
@@ -38,7 +38,7 @@ Translations started for
   <a href="/book/th">ภาษาไทย</a>,
   <a href="/book/vi">Tiếng Việt</a>,
   <a href="/book/uk">Українська</a> and
-  <a href="/book/uz/v2">Ўзбек</a>.
+  <a href="/book/uz/v2">Ўзбекча</a>.
 
 </p>
 <hr class="sidebar"/>
