SVN crash course: fix wording
Signed-off-by: Thomas Schneider <thosch97@gmail.com>

--- a/app/views/site/svn.html.erb
+++ b/app/views/site/svn.html.erb
@@ -157,7 +157,7 @@
   <li>
   <b>Visualize.</b>
   You may find it convenient to watch your repository using
-  the <code class="g">gitk</code> repository as you go.
+  the <code class="g">gitk</code> repository viewer as you go.
   </li>
 
   </ul>
