SVN crash course: link to IRC channel
Signed-off-by: Thomas Schneider <thosch97@gmail.com>

--- a/app/views/site/svn.html.erb
+++ b/app/views/site/svn.html.erb
@@ -530,6 +530,8 @@
 
   <p>If you have any questions or problems which are not obvious from
   the documentation, please contact us at the <strong>Git mailing list</strong>
-  at <a href="mailto:git@vger.kernel.org">git@vger.kernel.org</a>.
+  at <a href="mailto:git@vger.kernel.org">git@vger.kernel.org</a> or say hello
+  in the <code>#git</code> IRC channel on <a href="irc://chat.freenode.net">chat.freenode.net</a>
+  (<a href="https://webchat.freenode.net/?channels=%23git&uio=d4">webchat</a>).
   We hope you enjoy using Git!</p>
 </div>
