Added GitUp to list of GUIs

--- a/app/views/downloads/guis/index.html.haml
+++ b/app/views/downloads/guis/index.html.haml
@@ -51,6 +51,12 @@
           %p.description
             <strong>Platforms:</strong> Windows, Mac, Linux</br>
             <strong>Price:</strong> $79/user / Free for non-commercial use
+        %li.mac
+          =link_to(image_tag('guis/gitup@2x.png', {:width => '294', :height => '166'}), "http://gitup.co/")
+          %h4= link_to "GitUp", "http://gitup.co/"
+          %p.description
+            <strong>Platforms:</strong> Mac</br>
+            <strong>Price:</strong> Free
         %li.linux
           =link_to(image_tag('guis/giggle@2x.png', {:width => '294', :height => '166'}), "https://wiki.gnome.org/Apps/giggle/")
           %h4= link_to "giggle", "https://wiki.gnome.org/Apps/giggle/"
