Replace GitHub for Mac/Windows with GitHub Desktop

--- a/app/views/downloads/guis/index.html.haml
+++ b/app/views/downloads/guis/index.html.haml
@@ -21,17 +21,11 @@
   %div.two-column
     %div.column-left
       %ul.gui-thumbnails
-        %li.mac
-          =link_to(image_tag('guis/github-for-mac@2x.png', {:width => '294', :height => '166'}), "http://mac.github.com/")
-          %h4= link_to "GitHub for Mac", "http://mac.github.com/"
+        %li.mac.windows
+          =link_to(image_tag('guis/github-desktop@2x.png', {:width => '294', :height => '166'}), "https://desktop.github.com/")
+          %h4= link_to "GitHub Desktop", "https://desktop.github.com/"
           %p.description
-            <strong>Platforms:</strong> Mac</br>
-            <strong>Price:</strong> Free
-        %li.windows
-          =link_to(image_tag('guis/github-for-windows@2x.png', {:width => '294', :height => '166'}), "http://windows.github.com/")
-          %h4= link_to "GitHub for Windows", "http://windows.github.com/"
-          %p.description
-            <strong>Platforms:</strong> Windows</br>
+            <strong>Platforms:</strong> Windows, Mac</br>
             <strong>Price:</strong> Free
         %li.mac
           =link_to(image_tag('guis/gitx@2x.png', {:width => '294', :height => '166'}), "http://rowanj.github.io/gitx/")
@@ -54,6 +48,12 @@
         %li.linux
           =link_to(image_tag('guis/giggle@2x.png', {:width => '294', :height => '166'}), "https://wiki.gnome.org/Apps/giggle/")
           %h4= link_to "giggle", "https://wiki.gnome.org/Apps/giggle/"
+          %p.description
+            <strong>Platforms:</strong> Linux</br>
+            <strong>Price:</strong> Free
+        %li.linux
+          =link_to(image_tag('guis/gitg@2x.png', {:width => '294', :height => '166'}), "https://wiki.gnome.org/Apps/Gitg/")
+          %h4= link_to "gitg", "https://wiki.gnome.org/Apps/Gitg/"
           %p.description
             <strong>Platforms:</strong> Linux</br>
             <strong>Price:</strong> Free
@@ -88,12 +88,6 @@
           %h4= link_to "GitEye", "http://www.giteyeapp.com/"
           %p.description
             <strong>Platforms:</strong> Windows, Mac, Linux</br>
-            <strong>Price:</strong> Free
-        %li.linux
-          =link_to(image_tag('guis/gitg@2x.png', {:width => '294', :height => '166'}), "https://wiki.gnome.org/Apps/Gitg/")
-          %h4= link_to "gitg", "https://wiki.gnome.org/Apps/Gitg/"
-          %p.description
-            <strong>Platforms:</strong> Linux</br>
             <strong>Price:</strong> Free
 
   %div.callout
