--- a/app/views/downloads/guis/index.html.haml
+++ b/app/views/downloads/guis/index.html.haml
@@ -57,11 +57,11 @@
           %p.description
             <strong>Platforms:</strong> Linux</br>
             <strong>Price:</strong> Free
-        %li.linux
-          =link_to(image_tag('guis/gitg@2x.png', {:width => '294', :height => '166'}), "https://wiki.gnome.org/Apps/Gitg/")
-          %h4= link_to "gitg", "https://wiki.gnome.org/Apps/Gitg/"
+        %li.mac.windows.linux
+          =link_to(image_tag('guis/git-kraken@2x.png', {:width => '294', :height => '166'}), "http://www.gitkraken.com/")
+          %h4= link_to "GitKraken", "http://www.gitkraken.com/"
           %p.description
-            <strong>Platforms:</strong> Linux</br>
+            <strong>Platforms:</strong> Windows, Mac, Linux</br>
             <strong>Price:</strong> Free
     %div.column-right
       %ul.gui-thumbnails
@@ -95,8 +95,13 @@
           %p.description
             <strong>Platforms:</strong> Windows, Mac, Linux</br>
             <strong>Price:</strong> Free
+        %li.linux
+          =link_to(image_tag('guis/gitg@2x.png', {:width => '294', :height => '166'}), "https://wiki.gnome.org/Apps/Gitg/")
+          %h4= link_to "gitg", "https://wiki.gnome.org/Apps/Gitg/"
+          %p.description
+            <strong>Platforms:</strong> Linux</br>
+            <strong>Price:</strong> Free
 
   %div.callout
     %p
       There are other great GUI tools available as well. Have a look at the list of <a href="https://git.wiki.kernel.org/index.php/InterfacesFrontendsAndTools">interfaces, frontends and tools</a> in the Git Wiki.
-
