link to SFC "supporter" page in header
SFC is running a fund-drive, and it would be nice for us to
get the word out. This commit sticks a banner at the top of
each page. That's a bit invasive for all the time, but we
could probably run this for a few weeks.

--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -30,6 +30,12 @@ aside {
 }
 
 
+#banner {
+  background-color: #f0ffb8;
+  padding: 0.5em;
+  font-size: 120%;
+}
+
 #content {
   width: 702px;
   float: right;
