--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -8,4 +8,11 @@
     <input id="search-text" name="search" placeholder="Search entire site..." autocomplete="off" type="text" />
   </form>
   <div id="search-results"></div>
+
+  <div id="banner">
+    Git is a member project of Software Freedom Conservancy, which
+    handles legal and financial needs for the project. Conservancy is
+    currently raising funds to continue their mission. Consider
+    <a href="https://sfconservancy.org/supporter/">becoming a supporter</a>!
+  </div>
 </header>
