move banner to the top of the page and soften the styles

--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -29,11 +29,15 @@ aside {
   margin-bottom: 35px;
 }
 
-
 #banner {
-  background-color: #f0ffb8;
-  padding: 0.5em;
-  font-size: 120%;
+    background-color: #fcbda5;
+    color: #855;
+    padding: 1.0em 100px;
+    margin-bottom: 30px;
+    font-size: 100%;
+}
+#banner a {
+    color: #C22;
 }
 
 #content {
