--- a/app/views/site/index.html.erb
+++ b/app/views/site/index.html.erb
@@ -70,12 +70,12 @@
     <li><%= link_to "PostgreSQL", "http://git.postgresql.org/gitweb/", class: 'postgresql' %></li>
 
     <li><%= link_to "Android", "https://android-review.googlesource.com/#/q/status:open,n,z", class: 'android' %></li>
-    <li><%= link_to "Linux", "http://git.kernel.org/?p=linux/kernel/git/torvalds/linux-2.6.git;a=summary", class: 'linux' %></li>
+    <li><%= link_to "Linux", "https://git.kernel.org/cgit/linux/kernel/git/torvalds/linux.git", class: 'linux' %></li>
     <li><%= link_to "Ruby on Rails", "https://github.com/rails/rails", class: 'rails' %></li>
     <li><%= link_to "Qt", "http://code.qt.io/cgit/", class: 'qt' %></li>
     <li><%= link_to "Gnome", "http://git.gnome.org/browse/", class: 'gnome' %></li>
     <li><%= link_to "Eclipse", "http://git.eclipse.org/c/", class: 'eclipse' %></li>
     <li><%= link_to "KDE", "http://quickgit.kde.org/", class: 'kde' %></li>
-    <li><%= link_to "X", "http://www.x.org/wiki/Development/BuildingX/?action=show&redirect=Development%2Fgit", class: 'x' %></li>
+    <li><%= link_to "X", "http://cgit.freedesktop.org/xorg/xserver/", class: 'x' %></li>
 </ul>
 </section>
