--- a/app/views/community/index.html.erb
+++ b/app/views/community/index.html.erb
@@ -32,7 +32,11 @@
   <p>
     Bugs in git can be reported directly to the mailing list (see above for
     details). Note that you do not need to subscribe to the list to send
-    to it.
+    to it. You can help us out by attempting to reproduce the bug in the latest
+    released version of git, or if you're willing to build git from source, the
+    <a href="https://github.com/git/git/tree/next"><code>next</code> branch</a>.
+    Sometimes an attempted fix may be pending in this branch, in which case
+    your feedback as to whether the fix worked for you will be appreciated.
   </p>
 
   <p>
