Enforce https for entire site
Now that it's properly available behind https, let's enforce it so that
links get redirect over http and that we can set things like HSTS.

Also updates older links that should be links to *.github.io or link to
github.com over https.

--- a/app/views/downloads/guis/index.html.haml
+++ b/app/views/downloads/guis/index.html.haml
@@ -84,7 +84,7 @@
             <strong>Platforms:</strong> Windows</br>
             <strong>Price:</strong> Free
         %li.mac.windows.linux
-          =link_to(image_tag('guis/git-cola@2x.png', {:width => '294', :height => '166'}), "http://git-cola.github.com/")
+          =link_to(image_tag('guis/git-cola@2x.png', {:width => '294', :height => '166'}), "http://git-cola.github.io/")
           %h4= link_to "git-cola", "https://git-cola.github.io/"
           %p.description
             <strong>Platforms:</strong> Windows, Mac, Linux</br>
