--- a/app/views/downloads/guis/index.html.haml
+++ b/app/views/downloads/guis/index.html.haml
@@ -95,11 +95,11 @@
           %p.description
             <strong>Platforms:</strong> Windows, Mac, Linux</br>
             <strong>Price:</strong> Free
-        %li.linux
+        %li.windows.linux
           =link_to(image_tag('guis/gitg@2x.png', {:width => '294', :height => '166'}), "https://wiki.gnome.org/Apps/Gitg/")
           %h4= link_to "gitg", "https://wiki.gnome.org/Apps/Gitg/"
           %p.description
-            <strong>Platforms:</strong> Linux</br>
+            <strong>Platforms:</strong> Windows, Linux</br>
             <strong>Price:</strong> Free
 
   %div.callout
