trademark: add 2.2.5 covering "X for git"
This is a proposed addition from discussion between
Conservancy and the Git PLC.

--- a/app/views/site/trademark.html.erb
+++ b/app/views/site/trademark.html.erb
@@ -78,6 +78,10 @@ Project without written permission in the following contexts:</p>
 <li>When referring to Git software that is not substantially
 unmodified, to say that such software is a "derivative of"
 or "based on" Git.</li>
+<li>When referring to a third-party software product and/or service that
+is interoperable with the Git software, in the format "[Product Name]
+for Git" -- provided that such use otherwise complies with the rest of
+this Policy.
 </ol>
 
 <p>We do not charge a fee for a license to use the Marks
