--- a/app/assets/stylesheets/book.scss
+++ b/app/assets/stylesheets/book.scss
@@ -215,8 +215,9 @@ ol.book-toc {
     li {
       line-height: $base-line-height * .8;
       h2 {
+        margin: 14px 0;
         font-size: 14px;
-        margin-top: 0;
+        line-height: normal;
       }
       ol {
         margin-left: 0;
