--- a/app/views/downloads/guis/index.html.haml
+++ b/app/views/downloads/guis/index.html.haml
@@ -95,6 +95,12 @@
         %p.description
           <strong>Platforms:</strong> Windows, Mac, Linux</br>
           <strong>Price:</strong> Free
+      %li.mac.windows.linux
+        =link_to(image_tag('guis/ungit@2x.png', {:width => '294', :height => '166'}), "https://github.com/FredrikNoren/ungit")
+        %h4= link_to "ungit", "https://github.com/FredrikNoren/ungit"
+        %p.description
+          <strong>Platforms:</strong> Windows, Mac, Linux</br>
+          <strong>Price:</strong> Free
       %li.mac
         =link_to(image_tag('guis/gitbox@2x.png', {:width => '294', :height => '166'}), "http://www.gitboxapp.com/")
         %h4= link_to "Gitbox", "http://www.gitboxapp.com/"
