--- a/app/views/downloads/download_linux.html.erb
+++ b/app/views/downloads/download_linux.html.erb
@@ -23,6 +23,9 @@
 
   <h3>FreeBSD</h3>
   <code>$ cd /usr/ports/devel/git</code><br><code>$ make install</code>
+  
+  <h3>Solaris 9/10/11 (<a href="https://opencsw.org">OpenCSW</a>)</h3>
+  <code>$ pkgutil -i git</code>
 
   <h3>Solaris 11 Express</h3>
   <code>$ pkg install developer/versioning/git</code>
