--- a/app/views/downloads/download_linux.html.erb
+++ b/app/views/downloads/download_linux.html.erb
@@ -6,31 +6,31 @@
   <p>It is easiest to install Git on Linux using the preferred package manager of your Linux distribution.</p>
 
   <h3>Debian/Ubuntu</h3>
-  <code>$ apt-get install git</code>
+  <code># apt-get install git</code>
 
   <h3>Fedora</h3>
-  <code>$ yum install git</code> (up to Fedora 21)<br>
-  <code>$ dnf install git</code> (Fedora 22 and later)
+  <code># yum install git</code> (up to Fedora 21)<br>
+  <code># dnf install git</code> (Fedora 22 and later)
 
   <h3>Gentoo</h3>
-  <code>$ emerge --ask --verbose dev-vcs/git</code>
+  <code># emerge --ask --verbose dev-vcs/git</code>
 
   <h3>Arch Linux</h3>
-  <code>$ pacman -S git</code>
+  <code># pacman -S git</code>
 
   <h3>openSUSE</h3>
-  <code>$ zypper install git</code>
+  <code># zypper install git</code>
 
   <h3>FreeBSD</h3>
-  <code>$ cd /usr/ports/devel/git</code><br><code>$ make install</code>
+  <code>$ cd /usr/ports/devel/git</code><br><code># make install</code>
   
   <h3>Solaris 9/10/11 (<a href="https://opencsw.org">OpenCSW</a>)</h3>
-  <code>$ pkgutil -i git</code>
+  <code># pkgutil -i git</code>
 
   <h3>Solaris 11 Express</h3>
-  <code>$ pkg install developer/versioning/git</code>
+  <code># pkg install developer/versioning/git</code>
   
   <h3>OpenBSD</h3>
-  <code>$ pkg_add git</code>
+  <code># pkg_add git</code>
 
 </div>
