--- a/app/views/doc/ref.html.erb
+++ b/app/views/doc/ref.html.erb
@@ -7,7 +7,7 @@
   <div class='callout quickref'>
     <p>
       Quick reference guides:
-      <a href="https://training.github.com/kit/downloads/github-git-cheat-sheet.pdf">GitHub Cheat Sheet</a>
+      <a href="https://services.github.com/kit/downloads/github-git-cheat-sheet.pdf">GitHub Cheat Sheet</a>
       <small class='light'>(PDF) &nbsp;|&nbsp;</small>
       <a href="http://ndpsoftware.com/git-cheatsheet.html">Visual Git Cheat Sheet</a>
       <small class='light'>(SVG | PNG)</small>
