--- a/app/views/downloads/guis/index.html.haml
+++ b/app/views/downloads/guis/index.html.haml
@@ -101,6 +101,12 @@
           %p.description
             <strong>Platforms:</strong> Linux</br>
             <strong>Price:</strong> Free
+        %li.windows
+          =link_to(image_tag('guis/aurees@2x.png', {:width => '294', :height => '166'}), "https://aurees.com/")
+          %h4= link_to "Aurees", "https://aurees.com/"
+          %p.description
+            <strong>Platforms:</strong> Windows</br>
+            <strong>Price:</strong> $69.99/user / Free for non-commercial use
 
   %div.callout
     %p
