--- a/app/views/downloads/guis/index.html.haml
+++ b/app/views/downloads/guis/index.html.haml
@@ -63,6 +63,12 @@
           %p.description
             <strong>Platforms:</strong> Windows, Mac, Linux</br>
             <strong>Price:</strong> Free
+        %li.mac
+          =link_to(image_tag('guis/fork@2x.png', {:width => '294', :height => '166'}), "https://git-fork.com/")
+          %h4= link_to "Fork", "https://git-fork.com/"
+          %p.description
+            <strong>Platforms:</strong> Mac</br>
+            <strong>Price:</strong> Free
     %div.column-right
       %ul.gui-thumbnails
         %li.mac
