--- a/app/views/doc/_topics.html.erb
+++ b/app/views/doc/_topics.html.erb
@@ -19,6 +19,7 @@
       <%= render 'shared/ref/admin' %>
       <%= render 'shared/ref/server' %>
       <%= render 'shared/ref/plumbing' %>
+      <%= render 'shared/ref/guides' %>
     </div>
   </div>
 </div>
