--- a/app/views/downloads/guis/index.html.haml
+++ b/app/views/downloads/guis/index.html.haml
@@ -113,6 +113,12 @@
           %p.description
             <strong>Platforms:</strong> Windows</br>
             <strong>Price:</strong> $69.99/user / Free for non-commercial use
+        %li.mac.windows.linux
+          =link_to(image_tag('guis/cycligent@2x.png', {:width => '294', :height => '166'}), "https://www.cycligent.com/git-tool")
+          %h4= link_to "Cycligent Git Tool", "https://www.cycligent.com/git-tool"
+          %p.description
+            <strong>Platforms:</strong> Windows, Mac, Linux</br>
+            <strong>Price:</strong> Free
 
   %div.callout
     %p
