Added GitSurvey2016 banner
(based on commit 4818b272b25bfb3eabb55bcb449d0ad92c8eccc1)

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,6 +28,15 @@
 
 <body id="<%= @section %>">
 
+  <div class="inner" id="#promo">
+    <header>
+      The Git User's Survey 2016 is now up! <em>12 September &mdash; 20 October 2016.</em>
+    </header>
+    <p>
+      Please devote a few moments of your time to <a href="https://survs.com/survey/0janvqmmyg">fill out the simple questionnaire</a>. It'll help the Git community understand your needs, what you like about Git (and what you don't), and help us improve it in general. The results will be published at <a href="http://git.wiki.kernel.org/index.php/GitSurvey2016">GitSurvey2016</a> page.
+    </p>
+  </div>
+
   <div class="inner">
     <%= render partial: "shared/header" %>
   </div> <!-- .inner -->
