--- a/app/views/shared/ref/_guides.html.erb
+++ b/app/views/shared/ref/_guides.html.erb
@@ -1,11 +1,11 @@
 <h3 class='guides'>Guides</h3>
 <ul class='unstyled'>
-  <li><%= man('git-attributes') %></li>
-  <li><%= man('git-everyday') %></li>
-  <li><%= man('git-glossary') %></li>
-  <li><%= man('git-ignore') %></li>
-  <li><%= man('git-modules') %></li>
-  <li><%= man('git-revisions') %></li>
-  <li><%= man('git-tutorial') %></li>
-  <li><%= man('git-workflows') %></li>
+  <li><%= man('gitattributes') %></li>
+  <li><%= man('giteveryday') %></li>
+  <li><%= man('gitglossary') %></li>
+  <li><%= man('gitignore') %></li>
+  <li><%= man('gitmodules') %></li>
+  <li><%= man('gitrevisions') %></li>
+  <li><%= man('gittutorial') %></li>
+  <li><%= man('gitworkflows') %></li>
 </ul>
