Adding Greek in the translation-started section.

--- a/app/views/doc/_translations.html.erb
+++ b/app/views/doc/_translations.html.erb
@@ -27,6 +27,7 @@ Translations started for
   <a href="/book/az">Azərbaycan dili</a>,
   <a href="/book/be">Беларуская</a>,
   <a href="/book/ca">Català</a>,
+  <a href="/book/el">Ελληνικά</a>,
   <a href="/book/eo">Esperanto</a>,
   <a href="/book/es-ni">Español (Nicaragua)</a>,
   <a href="/book/fa" dir="rtl">یسراف</a>,
