Update Sourceforge links to HTTPS.

--- a/app/views/downloads/installers/index.html.haml
+++ b/app/views/downloads/installers/index.html.haml
@@ -33,7 +33,7 @@
             %td
               %strong Mac
             %td
-              =link_to "Stable", "http://sourceforge.net/projects/git-osx-installer/files/"
+              =link_to "Stable", "https://sourceforge.net/projects/git-osx-installer/files/"
           %tr
             %td
               %strong Solaris
