Update git-scm links to HTTPS.

--- a/app/views/site/trademark.html.erb
+++ b/app/views/site/trademark.html.erb
@@ -27,7 +27,7 @@ develop the Git software.</p>
 <ul>
 <li><p>the literal mark "Git"</p></li>
 <li><p>The logos and graphic marks displayed and available for
-download at <a href="http://git-scm.com/downloads/logos">http://git-scm.com/downloads/logos</a></p></li>
+download at <a href="https://git-scm.com/downloads/logos">https://git-scm.com/downloads/logos</a></p></li>
 <li><p>The slogan "the stupid content tracker"</p></li>
 </ul>
 
@@ -93,7 +93,7 @@ this Policy.
 <p>We do not charge a fee for a license to use the Marks
 in these contexts. However, we do of course welcome donations.
 If you're interested in donating to the Git Project, care of
-Conservancy, visit <a href="http://git-scm.com/sfc">http://git-scm.com/sfc</a>.
+Conservancy, visit <a href="https://git-scm.com/sfc">https://git-scm.com/sfc</a>.
 Conservancy is a United States 501(c)(3) public charity.</p>
 
 <h3>2.3 Prohibited usages of the Marks</h3>
