Update kernel.org links to HTTPS.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,7 +37,7 @@
       It will help the Git community understand your needs, what you like
       about Git (and what you don't), and help us improve it in general.
       The results will be published at the
-      <a href="http://git.wiki.kernel.org/index.php/GitSurvey2016">GitSurvey2016</a>
+      <a href="https://git.wiki.kernel.org/index.php/GitSurvey2016">GitSurvey2016</a>
       wiki page.
     </div>
   </div>
