Update package.debian.org links to HTTPS.

--- a/app/views/downloads/installers/index.html.haml
+++ b/app/views/downloads/installers/index.html.haml
@@ -17,11 +17,11 @@
             %td
               %strong Debian
             %td
-              =link_to "Stable", "http://packages.debian.org/stable/devel/git"
+              =link_to "Stable", "https://packages.debian.org/stable/devel/git"
               <span class="light">|</span>
-              =link_to "Testing", "http://packages.debian.org/testing/devel/git"
+              =link_to "Testing", "https://packages.debian.org/testing/devel/git"
               <span class="light">|</span>
-              =link_to "Unstable", "http://packages.debian.org/unstable/devel/git"
+              =link_to "Unstable", "https://packages.debian.org/unstable/devel/git"
           %tr
             %td
               %strong Windows
