Update the Cygwin installation link to HTTPS.

--- a/app/views/downloads/installers/index.html.haml
+++ b/app/views/downloads/installers/index.html.haml
@@ -28,7 +28,7 @@
             %td
               =link_to "Stable", "https://github.com/git-for-windows/git/releases"
               <span class="light">|</span>
-              =link_to "Cygwin", "http://www.cygwin.com/setup.exe"
+              =link_to "Cygwin", "https://cygwin.com/install.html"
           %tr
             %td
               %strong Mac
