--- a/app/views/site/index.html.erb
+++ b/app/views/site/index.html.erb
@@ -67,15 +67,15 @@
     <li><%= link_to "LinkedIn", "https://github.com/linkedin", class: 'linked-in' %></li>
     <li><%= link_to "Netflix", "https://github.com/netflix", class: 'netflix' %></li>
     <li><%= link_to "Perl", "http://perl5.git.perl.org/perl.git", class: 'perl' %></li>
-    <li><%= link_to "PostgreSQL", "http://git.postgresql.org/gitweb/", class: 'postgresql' %></li>
+    <li><%= link_to "PostgreSQL", "https://git.postgresql.org/gitweb/", class: 'postgresql' %></li>
 
     <li><%= link_to "Android", "https://android-review.googlesource.com/#/q/status:open,n,z", class: 'android' %></li>
     <li><%= link_to "Linux", "https://git.kernel.org/cgit/linux/kernel/git/torvalds/linux.git", class: 'linux' %></li>
     <li><%= link_to "Ruby on Rails", "https://github.com/rails/rails", class: 'rails' %></li>
-    <li><%= link_to "Qt", "http://code.qt.io/cgit/", class: 'qt' %></li>
-    <li><%= link_to "Gnome", "http://git.gnome.org/browse/", class: 'gnome' %></li>
-    <li><%= link_to "Eclipse", "http://git.eclipse.org/c/", class: 'eclipse' %></li>
-    <li><%= link_to "KDE", "http://quickgit.kde.org/", class: 'kde' %></li>
-    <li><%= link_to "X", "http://cgit.freedesktop.org/xorg/xserver/", class: 'x' %></li>
+    <li><%= link_to "Qt", "https://code.qt.io/cgit/", class: 'qt' %></li>
+    <li><%= link_to "Gnome", "https://git.gnome.org/browse/", class: 'gnome' %></li>
+    <li><%= link_to "Eclipse", "https://git.eclipse.org/c/", class: 'eclipse' %></li>
+    <li><%= link_to "KDE", "https://quickgit.kde.org/", class: 'kde' %></li>
+    <li><%= link_to "X", "https://cgit.freedesktop.org/xorg/xserver/", class: 'x' %></li>
 </ul>
 </section>
