Update github links to HTTPS.

--- a/app/views/doc/ext.html.erb
+++ b/app/views/doc/ext.html.erb
@@ -105,8 +105,8 @@
           </p>
         </li>
         <li>
-          <a href="http://cbx33.github.io/gitt/"><img src="/images/books/git-in-the-trenches@2x.jpg" /></a>
-          <h4><a href="http://cbx33.github.io/gitt/">Git in the Trenches</a></h4>
+          <a href="https://cbx33.github.io/gitt/"><img src="/images/books/git-in-the-trenches@2x.jpg" /></a>
+          <h4><a href="https://cbx33.github.io/gitt/">Git in the Trenches</a></h4>
           <p class='description'>
             By Peter Savage
             <img class="creative-commons" src="/images/creative-commons.png" />
