git kraken now free only for non-commercial

--- a/app/views/downloads/guis/index.html.haml
+++ b/app/views/downloads/guis/index.html.haml
@@ -62,7 +62,7 @@
           %h4= link_to "GitKraken", "https://www.gitkraken.com/"
           %p.description
             <strong>Platforms:</strong> Windows, Mac, Linux</br>
-            <strong>Price:</strong> Free
+            <strong>Price:</strong> Free for non-commercial use
         %li.mac
           =link_to(image_tag('guis/fork@2x.png', {:width => '294', :height => '166'}), "https://git-fork.com/")
           %h4= link_to "Fork", "https://git-fork.com/"
