Don't force the choice of fixed-width fonts

--- a/app/assets/stylesheets/typography.scss
+++ b/app/assets/stylesheets/typography.scss
@@ -220,7 +220,7 @@ code {
   background-color: #fff;
   border: solid 1px #efeee6;
   color: $orange;
-  font-family: $fixed-width-font-family !important;
+  font-family: $fixed-width-font-family;
   line-height: $fixed-width-line-height;
   overflow: auto;
 }
@@ -325,5 +325,5 @@ div.more {
 }
 
 .fixed {
-  font-family: $fixed-width-font-family !important;
+  font-family: $fixed-width-font-family;
 }
