templates: squeeze if/else whitespace out of section template
This brings us closer to what regular asciidoctor produces,
which will be useful for comparing output in the following
steps.

--- a/templates/section.html.erb
+++ b/templates/section.html.erb
@@ -1,8 +1,6 @@
 <div class="sect<%= level %>">
-  <h<%= level + 1 %> id="<%= id %>"><%= name %></h<%= level + 1 %>>
-  <% if level == 1 %>
-    <div class="sectionbody"><%= content %></div>
-  <% else %>
-    <%= content %>
-  <% end %>
+<h<%= level + 1 %> id="<%= id %>"><%= name %></h<%= level + 1 %>>
+<% if level == 1 %><div class="sectionbody">
+<%= content %>
+</div><% else %><%= content %><% end %>
 </div>
