Add windows class to Tower list item
Add windows class to Tower list item so it will be included when filtering by OS

--- a/app/views/downloads/guis/index.html.haml
+++ b/app/views/downloads/guis/index.html.haml
@@ -71,7 +71,7 @@
             <strong>Price:</strong> Free
     %div.column-right
       %ul.gui-thumbnails
-        %li.mac
+        %li.mac.windows
           =link_to(image_tag('guis/tower@2x.png', {:width => '294', :height => '166'}), "https://www.git-tower.com/")
           %h4= link_to "Tower", "https://www.git-tower.com/"
           %p.description
