--- a/app/views/blog/posts/2011-07-11-reset.html
+++ b/app/views/blog/posts/2011-07-11-reset.html
@@ -1,6 +1,7 @@
 ---
 layout: post
 title: Reset Demystified
+author:
 ---
 
 <p>One of the topics that I didn't cover in depth in the Pro Git book is the
@@ -65,10 +66,10 @@ Here is an example of getting the actual directory listing and SHA checksums
 for each file in the HEAD snapshot:</p>
 
 <pre>
-$ cat .git/HEAD 
+$ cat .git/HEAD
 ref: refs/heads/master
 
-$ cat .git/refs/heads/master 
+$ cat .git/refs/heads/master
 e9a570524b63d2a2b3a7c3325acf5b89bbeb131e
 
 $ git cat-file -p e9a570524b63d2a2b3a7c3325acf5b89bbeb131e
@@ -234,7 +235,7 @@ would have done.</p>
 <p>Note that if you run <code>git status</code> now you'll see in green the
 difference between the Index and what the new HEAD is.</p>
 
-<p>The next thing <code>reset</code> will do 
+<p>The next thing <code>reset</code> will do
 is to update the Index with the contents of whatever tree HEAD now
 points to so they're the same.</p>
 
@@ -306,7 +307,7 @@ with previously committed content this way.
 
 <p>So, assume we run <code>git reset file.txt</code>.  This assumes, since you
 did not specify a commit SHA or branch that points to a commit SHA, and that you
-provided no reset option, that you are typing the shorthand for 
+provided no reset option, that you are typing the shorthand for
 <code>git reset --mixed HEAD file.txt</code>, which will:
 
 <ul>
