add cool anchor thingy to commandline options

--- a/app/assets/stylesheets/reference.scss
+++ b/app/assets/stylesheets/reference.scss
@@ -55,7 +55,7 @@ h3.plumbing {
 
 // § section sign anchor links
 #content {
-  h1>a.anchor,h2>a.anchor,h3>a.anchor {
+  h1>a.anchor,h2>a.anchor,h3>a.anchor,dt.hdlist1>a.anchor {
     position: absolute;
     margin-left: -1.5em;
     text-align: center;
@@ -64,12 +64,12 @@ h3.plumbing {
     width: 2em;
     font-weight: lighter
   }
-  h1>a.anchor:before,h2>a.anchor:before,h3>a.anchor:before {
+  h1>a.anchor:before,h2>a.anchor:before,h3>a.anchor:before,dt.hdlist1>a.anchor:before {
     content:"\00A7";
     font-size:.9em;
     display:block
   }
-  h1:hover>a.anchor,h2:hover>a.anchor,h3:hover>a.anchor {
+  h1:hover>a.anchor,h2:hover>a.anchor,h3:hover>a.anchor,dt.hdlist1:hover>a.anchor {
     visibility:visible
   }
 }
