--- a/app/views/downloads/guis/index.html.haml
+++ b/app/views/downloads/guis/index.html.haml
@@ -113,6 +113,12 @@
           %p.description
             <strong>Platforms:</strong> Windows</br>
             <strong>Price:</strong> $69.99/user / Free for non-commercial use
+        %li.mac.windows.linux
+          =link_to(image_tag('guis/gitahead@2x.png', {:width => '294', :height => '166'}), "https://www.gitahead.com/")
+          %h4= link_to "GitAhead", "https://www.gitahead.com/"
+          %p.description
+            <strong>Platforms:</strong> Windows, Mac, Linux</br>
+            <strong>Price:</strong> $29/user (Free 15 day trial)
 
   %div.callout
     %p
