point opencsw links to www.opencsw.org
The certificate it serves if for the latter, so this avoids
browser warnings over https.

Fixes #921.

--- a/app/views/downloads/download_linux.html.erb
+++ b/app/views/downloads/download_linux.html.erb
@@ -24,7 +24,7 @@
   <h3>FreeBSD</h3>
   <code>$ cd /usr/ports/devel/git</code><br><code>$ make install</code>
   
-  <h3>Solaris 9/10/11 (<a href="https://opencsw.org">OpenCSW</a>)</h3>
+  <h3>Solaris 9/10/11 (<a href="https://www.opencsw.org">OpenCSW</a>)</h3>
   <code>$ pkgutil -i git</code>
 
   <h3>Solaris 11 Express</h3>
