--- a/app/views/downloads/installers/index.html.haml
+++ b/app/views/downloads/installers/index.html.haml
@@ -40,7 +40,7 @@
             %td
               =link_to "v8-10", "http://sunfreeware.com"
               <span class="light">|</span>
-              =link_to "v9-10", "http://opencsw.org/packages/git/"
+              =link_to "v9-10", "http://www.opencsw.org/packages/git/"
 
       %p
         <a href="https://www.kernel.org/pub/software/scm/git/">Older releases</a> are available and the <a href="https://github.com/gitster/git">Git source repository</a> is on GitHub.
