book: mention Greek translation
I've listed it as a partial, since it's not done. I'm
unclear on the distinction between "partial" and "started",
but this seems to be about as far along as some of the other
partials.

I pulled the native word for "Greek" from Wikipedia.
Hopefully it's right, but I've asked a native speaker to
double-check.

--- a/app/views/books/_translations.html.erb
+++ b/app/views/books/_translations.html.erb
@@ -19,6 +19,7 @@ Partial translations available in
   <a href="/book/it">Italiano</a>,
   <a href="/book/fi">Suomi</a>,
   <a href="/book/mk">Македонски</a>,
+  <a href="/book/gr">Ελληνικά</a>,
   <a href="/book/pl">Polski</a> and
   <a href="/book/tr">Türkçe</a>.
 </p>
