--- a/app/views/doc/_translations.html.erb
+++ b/app/views/doc/_translations.html.erb
@@ -19,6 +19,7 @@ Partial translations available in
   <a href="/book/it">Italiano</a>,
   <a href="/book/fi">Suomi</a>,
   <a href="/book/mk">Македонски</a>,
+  <a href="/book/gr">Ελληνικά</a>,
   <a href="/book/pl">Polski</a> and
   <a href="/book/tr">Türkçe</a>.
 </p>
