--- a/app/views/doc/ext.html.erb
+++ b/app/views/doc/ext.html.erb
@@ -206,4 +206,27 @@
       </ul>
     </div>
   </div>
+  <h2>Courses</h2>
+  <div class='two-column'>
+    <div class='column-left'>
+      <ul class='course-list'>
+        <li>
+         <h4><a href="https://www.packtpub.com/application-development/git-mastering-version-control">Git: Mastering Version Control</a></h4>
+          <p class='description'>
+            By Ferdinando Santacroce, Aske Olsson, Rasmus Voss and Jakub Narębski
+          </p>
+        </li>
+       </ul>
+     </div>
+     <div class='column-right'>
+      <ul class='course-list'>
+       <li>
+         <h4><a href="https://www.packtpub.com/application-development/git-version-control-made-easy">Git: Version Control Made Easy</a></h4>
+          <p class='description'>
+            Use the powerful features of Git in your projects
+          </p>
+        </li>
+       </ul>
+     </div>
+  </div>	
 </div>
